--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - uses: sbt/setup-sbt@v1
       - name: Run tests
         working-directory: ./scalafix
         run: sbt test
