--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
+      - uses: coursier/setup-action@v1
         with:
-          java-version: '11'
-          distribution: 'temurin'
+          jvm: temurin:8
       - uses: sbt/setup-sbt@v1
       - name: Run tests
         working-directory: ./scalafix
